--- a/docs/_sass/example.sass
+++ b/docs/_sass/example.sass
@@ -81,6 +81,10 @@
   .bd-snippet-code
     overflow: auto
 
+.bd-snippet.bd-is-fullwidth
+  border-radius: 0
+  border-width: 1px 0
+
 +desktop
   .bd-snippet.bd-is-vertical
     align-items: stretch
