--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -10402,7 +10402,7 @@ svg {
   text-decoration: underline;
 }
 
-.bd-typo {
+.bd-typo:not(:first-child) {
   margin-top: 3rem;
 }
 
@@ -10937,6 +10937,11 @@ svg {
 
 .bd-snippet.bd-is-clipped .bd-snippet-code {
   overflow: auto;
+}
+
+.bd-snippet.bd-is-fullwidth {
+  border-radius: 0;
+  border-width: 1px 0;
 }
 
 @media screen and (min-width: 1024px) {
