--- a/docs/documentation/layout/hero.html
+++ b/docs/documentation/layout/hero.html
@@ -1,20 +1,13 @@
 ---
 title: Hero
+subtitle: "An imposing <strong>hero banner</strong> to showcase something"
 layout: documentation
+hide_carbon: true
 doc-tab: layout
 doc-subtab: hero
 ---
 
-{% include subnav/subnav-layout.html %}
-
-<section class="section">
-  <div class="container">
-    <h1 class="title">Hero</h1>
-    <h2 class="subtitle">
-      An imposing <strong>hero banner</strong> to showcase something
-    </h2>
-  </div>
-</section>
+{% include layout/main-close.html show_carbon=true %}
 
 <section class="section is-fullwidth">
   <div class="bd-example">
@@ -31,6 +24,7 @@ doc-subtab: hero
       </div>
     </section>
   </div>
+</section>
 
 {% highlight html %}
 <section class="hero">
@@ -654,3 +648,5 @@ doc-subtab: hero
   {% include snippet.html content=heroNavbarB horizontal=true more=true %}
   {% include snippet.html content=heroNavbarC horizontal=true more=true %}
 </section>
+
+{% include layout/main-open.html %}
