Fix main header

--- a/docs/_includes/layout/main-close.html
+++ b/docs/_includes/layout/main-close.html
@@ -2,9 +2,7 @@
       </div>
 
       <aside class="bd-side">
-        {% if include.show_carbon %}
-          {% include carbon.html %}
-        {% endif %}
+        <!-- Empty on purpose -->
       </aside>
     </div>
   </div>
