--- a/docs/_sass/global.sass
+++ b/docs/_sass/global.sass
@@ -16,7 +16,7 @@ $carbon-poweredby-height: 20px
   margin-left: auto
   margin-right: auto
   max-width: $carbon-width
-  min-height: 120px
+  min-height: $carbon-height
   min-width: 280px
 
 #carbon
