--- a/docs/_sass/main.sass
+++ b/docs/_sass/main.sass
@@ -1,3 +1,5 @@
+$main-spacing: 2.5rem
+
 .bd-main
   overflow: hidden
   position: relative
@@ -11,7 +13,7 @@
 .bd-breadcrumb
   display: flex
   justify-content: space-between
-  margin-bottom: 2.5rem
+  margin-bottom: $main-spacing
   .breadcrumb:not(:last-child)
     margin-bottom: 0
 
@@ -32,11 +34,15 @@
       background-color: $background
 
 .bd-header
-  margin-bottom: 2.5rem
+  border-bottom: 2px solid $background
+  margin-bottom: $main-spacing
+  padding-bottom: $main-spacing
   .subtitle
     color: $text-light
     strong
       color: currentColor
+  #meta
+    margin-top: -0.5rem
 
 // Side
 
@@ -72,6 +78,16 @@
     overflow: hidden
     flex-grow: 1
     flex-shrink: 1
+  .bd-header
+    display: flex
+  .bd-header-titles
+    flex-grow: 1
+    flex-shrink: 1
+  .bd-header-carbon
+    flex-grow: 0
+    flex-shrink: 0
+    margin-left: 1.5rem
+    width: $carbon-width
   .bd-prev-next
     display: flex
   .bd-side
