--- a/docs/documentation/layout/container.html
+++ b/docs/documentation/layout/container.html
@@ -5,6 +5,11 @@ layout: documentation
 hide_carbon: true
 doc-tab: layout
 doc-subtab: container
+breadcrumb:
+- home
+- documentation
+- layout
+- layout-container
 ---
 
 {% capture container_example %}
@@ -62,7 +67,7 @@ doc-subtab: container
   <p>The values <strong>960</strong>, <strong>1152</strong> and <strong>1344</strong> have been chosen because they are divisible by both <strong>12</strong> and <strong>16</strong>.</p>
 </div>
 
-{% include layout/main-close.html show_carbon=true %}
+{% include layout/main-close.html %}
 
 <div class="bd-example is-fullwidth">
   {{container_example}}
