--- a/docs/documentation/layout/footer.html
+++ b/docs/documentation/layout/footer.html
@@ -5,6 +5,11 @@ layout: documentation
 hide_carbon: true
 doc-tab: layout
 doc-subtab: footer
+breadcrumb:
+- home
+- documentation
+- layout
+- layout-footer
 ---
 
 {% capture footer_example %}
@@ -21,7 +26,7 @@ doc-subtab: footer
 </footer>
 {% endcapture %}
 
-{% include layout/main-close.html show_carbon=true %}
+{% include layout/main-close.html %}
 
 {% include snippet.html content=footer_example horizontal=true more=true fullwidth=true %}
 
