--- a/docs/documentation/layout/hero.html
+++ b/docs/documentation/layout/hero.html
@@ -5,9 +5,14 @@ layout: documentation
 hide_carbon: true
 doc-tab: layout
 doc-subtab: hero
+breadcrumb:
+- home
+- documentation
+- layout
+- layout-hero
 ---
 
-{% include layout/main-close.html show_carbon=true %}
+{% include layout/main-close.html %}
 
 <section class="section is-fullwidth">
   <div class="bd-example">
