--- a/docs/documentation/layout/level.html
+++ b/docs/documentation/layout/level.html
@@ -4,6 +4,11 @@ subtitle: "A multi-purpose <strong>horizontal level</strong>, which can contain 
 layout: documentation
 doc-tab: layout
 doc-subtab: level
+breadcrumb:
+- home
+- documentation
+- layout
+- layout-level
 ---
 
 {% capture nav_example %}
