--- a/docs/documentation/layout/media-object.html
+++ b/docs/documentation/layout/media-object.html
@@ -4,6 +4,11 @@ subtitle: "The famous <strong>media object</strong> prevalent in social media in
 layout: documentation
 doc-tab: layout
 doc-subtab: media-object
+breadcrumb:
+- home
+- documentation
+- layout
+- layout-media
 ---
 
 {% capture media_example %}
