--- a/docs/documentation/layout/tiles.html
+++ b/docs/documentation/layout/tiles.html
@@ -4,6 +4,11 @@ subtitle: "A <strong>single tile</strong> element to build 2-dimensional Metro-l
 layout: documentation
 doc-tab: layout
 doc-subtab: tiles
+breadcrumb:
+- home
+- documentation
+- layout
+- layout-tiles
 ---
 
 {% capture tile_empty %}
