--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -9527,7 +9527,9 @@ label.panel-block:hover {
 }
 
 .bd-header {
+  border-bottom: 2px solid whitesmoke;
   margin-bottom: 2.5rem;
+  padding-bottom: 2.5rem;
 }
 
 .bd-header .subtitle {
@@ -9536,6 +9538,10 @@ label.panel-block:hover {
 
 .bd-header .subtitle strong {
   color: currentColor;
+}
+
+.bd-header #meta {
+  margin-top: -0.5rem;
 }
 
 .bd-side,
@@ -9577,6 +9583,19 @@ label.panel-block:hover {
     overflow: hidden;
     flex-grow: 1;
     flex-shrink: 1;
+  }
+  .bd-header {
+    display: flex;
+  }
+  .bd-header-titles {
+    flex-grow: 1;
+    flex-shrink: 1;
+  }
+  .bd-header-carbon {
+    flex-grow: 0;
+    flex-shrink: 0;
+    margin-left: 1.5rem;
+    width: 300px;
   }
   .bd-prev-next {
     display: flex;
@@ -9879,7 +9898,7 @@ svg {
   margin-left: auto;
   margin-right: auto;
   max-width: 300px;
-  min-height: 120px;
+  min-height: 100px;
   min-width: 280px;
 }
 
