--- a/docs/documentation/layout/section.html
+++ b/docs/documentation/layout/section.html
@@ -4,6 +4,11 @@ subtitle: "A simple container to divide your page into <strong>sections</strong>
 layout: documentation
 doc-tab: layout
 doc-subtab: section
+breadcrumb:
+- home
+- documentation
+- layout
+- layout-section
 ---
 
 {% capture section_example %}
