Add modifiers links

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -9534,6 +9534,7 @@ label.panel-block:hover {
 
 .bd-header .subtitle {
   color: #7a7a7a;
+  max-width: 21em;
 }
 
 .bd-header .subtitle strong {
@@ -9542,6 +9543,14 @@ label.panel-block:hover {
 
 .bd-header #meta {
   margin-top: -0.5rem;
+}
+
+.bd-content hr:first-child {
+  display: none;
+}
+
+.bd-content hr:first-child + .bd-anchor-title {
+  padding-top: 0;
 }
 
 .bd-side,
@@ -9566,6 +9575,9 @@ label.panel-block:hover {
   .bd-side {
     padding: 1.5rem;
   }
+  .bd-header-carbon {
+    margin-top: 1.5rem;
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -9584,19 +9596,6 @@ label.panel-block:hover {
     flex-grow: 1;
     flex-shrink: 1;
   }
-  .bd-header {
-    display: flex;
-  }
-  .bd-header-titles {
-    flex-grow: 1;
-    flex-shrink: 1;
-  }
-  .bd-header-carbon {
-    flex-grow: 0;
-    flex-shrink: 0;
-    margin-left: 1.5rem;
-    width: 300px;
-  }
   .bd-prev-next {
     display: flex;
   }
@@ -9612,6 +9611,19 @@ label.panel-block:hover {
   .bd-lead {
     margin-left: -3rem;
     padding: 3rem;
+  }
+  .bd-header {
+    display: flex;
+  }
+  .bd-header-titles {
+    flex-grow: 1;
+    flex-shrink: 1;
+  }
+  .bd-header-carbon {
+    flex-grow: 0;
+    flex-shrink: 0;
+    margin-left: 1.5rem;
+    width: 300px;
   }
   .bd-side {
     padding: 3rem 0 3rem 1.5rem;
