--- a/docs/_sass/main.sass
+++ b/docs/_sass/main.sass
@@ -7,7 +7,6 @@ $main-spacing: 2.5rem
 // Lead
 
 .bd-lead
-  // border: 1px solid lightskyblue
   position: relative
 
 .bd-breadcrumb
@@ -39,17 +38,23 @@ $main-spacing: 2.5rem
   padding-bottom: $main-spacing
   .subtitle
     color: $text-light
+    max-width: 21em
     strong
       color: currentColor
   #meta
     margin-top: -0.5rem
+
+.bd-content
+  hr:first-child
+    display: none
+    & + .bd-anchor-title
+      padding-top: 0
 
 // Side
 
 .bd-side,
 .bd-side-background
   background-color: $white-bis
-  // border: 1px solid coral
 
 .bd-side
   position: relative
@@ -65,6 +70,8 @@ $main-spacing: 2.5rem
   .bd-lead,
   .bd-side
     padding: 1.5rem
+  .bd-header-carbon
+    margin-top: 1.5rem
 
 +mobile
   .bd-side-background
@@ -78,16 +85,6 @@ $main-spacing: 2.5rem
     overflow: hidden
     flex-grow: 1
     flex-shrink: 1
-  .bd-header
-    display: flex
-  .bd-header-titles
-    flex-grow: 1
-    flex-shrink: 1
-  .bd-header-carbon
-    flex-grow: 0
-    flex-shrink: 0
-    margin-left: 1.5rem
-    width: $carbon-width
   .bd-prev-next
     display: flex
   .bd-side
@@ -99,5 +96,15 @@ $main-spacing: 2.5rem
   .bd-lead
     margin-left: -3rem
     padding: 3rem
+  .bd-header
+    display: flex
+  .bd-header-titles
+    flex-grow: 1
+    flex-shrink: 1
+  .bd-header-carbon
+    flex-grow: 0
+    flex-shrink: 0
+    margin-left: 1.5rem
+    width: $carbon-width
   .bd-side
     padding: 3rem 0 3rem 1.5rem
