--- a/docs/_sass/main.sass
+++ b/docs/_sass/main.sass
@@ -77,6 +77,8 @@ $main-spacing: 2.5rem
   .bd-side-background
     display: none
 
+$sidebar-width: 16rem
+
 +tablet
   .bd-duo
     display: flex
@@ -88,7 +90,7 @@ $main-spacing: 2.5rem
   .bd-prev-next
     display: flex
   .bd-side
-    flex: 0 0 calc(#{$carbon-width} + 1.5rem)
+    flex: 0 0 calc(#{$sidebar-width} + 1.5rem)
 
 +desktop
   .bd-main
@@ -97,14 +99,16 @@ $main-spacing: 2.5rem
     margin-left: -3rem
     padding: 3rem
   .bd-header
+    align-items: center
     display: flex
+    min-height: 130px
   .bd-header-titles
     flex-grow: 1
     flex-shrink: 1
   .bd-header-carbon
     flex-grow: 0
     flex-shrink: 0
-    margin-left: 1.5rem
+    margin: -15px 0 -15px 1.5rem
     width: $carbon-width
   .bd-side
     padding: 3rem 0 3rem 1.5rem
