--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -9600,7 +9600,7 @@ label.panel-block:hover {
     display: flex;
   }
   .bd-side {
-    flex: 0 0 calc(300px + 1.5rem);
+    flex: 0 0 calc(16rem + 1.5rem);
   }
 }
 
@@ -9613,7 +9613,9 @@ label.panel-block:hover {
     padding: 3rem;
   }
   .bd-header {
+    align-items: center;
     display: flex;
+    min-height: 130px;
   }
   .bd-header-titles {
     flex-grow: 1;
@@ -9622,7 +9624,7 @@ label.panel-block:hover {
   .bd-header-carbon {
     flex-grow: 0;
     flex-shrink: 0;
-    margin-left: 1.5rem;
+    margin: -15px 0 -15px 1.5rem;
     width: 300px;
   }
   .bd-side {
