--- a/docs/_sass/main.sass
+++ b/docs/_sass/main.sass
@@ -66,6 +66,44 @@ $main-spacing: 2.5rem
   right: 0
   top: 0
 
+.bd-category
+  a
+    &:hover
+      color: $link
+  &:not(:last-child)
+    margin-bottom: 0.5rem
+
+.bd-category-header
+  position: relative
+
+.bd-category-toggle
+  +overlay
+  align-items: center
+  color: $grey-light
+  display: flex
+  justify-content: flex-end
+  .icon
+    font-size: 0.75rem
+
+.bd-category-name
+  color: $text-strong
+  position: relative
+
+.bd-category-list
+  display: none
+  font-size: 0.875rem
+  padding: 0.5rem
+  li
+    &:not(:last-child)
+      margin-bottom: 0.5em
+    &.is-current
+      a
+        color: $link
+  a
+    color: $text-light
+  &.is-active
+    display: block
+
 +touch
   .bd-lead,
   .bd-side
@@ -77,7 +115,7 @@ $main-spacing: 2.5rem
   .bd-side-background
     display: none
 
-$sidebar-width: 16rem
+$sidebar-width: 14rem
 
 +tablet
   .bd-duo
