--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -130,7 +130,7 @@
   width: 1em;
 }
 
-.is-overlay, .image.is-square img, .image.is-1by1 img, .image.is-5by4 img, .image.is-4by3 img, .image.is-3by2 img, .image.is-5by3 img, .image.is-16by9 img, .image.is-2by1 img, .image.is-3by1 img, .image.is-4by5 img, .image.is-3by4 img, .image.is-2by3 img, .image.is-3by5 img, .image.is-9by16 img, .image.is-1by2 img, .image.is-1by3 img, .modal, .modal-background, .hero-video, .intro-spinner, .intro-shadow, .bd-article-overlay, .bd-article-icon,
+.is-overlay, .image.is-square img, .image.is-1by1 img, .image.is-5by4 img, .image.is-4by3 img, .image.is-3by2 img, .image.is-5by3 img, .image.is-16by9 img, .image.is-2by1 img, .image.is-3by1 img, .image.is-4by5 img, .image.is-3by4 img, .image.is-2by3 img, .image.is-3by5 img, .image.is-9by16 img, .image.is-1by2 img, .image.is-1by3 img, .modal, .modal-background, .hero-video, .bd-category-toggle, .intro-spinner, .intro-shadow, .bd-article-overlay, .bd-article-icon,
 .bd-article-info, .bd-structure-item::before, .bd-structure-item::after, .highlight .bd-show, .bd-banner-background, .bd-book-pattern::before,
 .bd-book-modal-column.bd-is-cover::before, .bd-book-pattern, .bd-book-modal-background {
   bottom: 0;
@@ -9570,6 +9570,56 @@ label.panel-block:hover {
   top: 0;
 }
 
+.bd-category a:hover {
+  color: #3273dc;
+}
+
+.bd-category:not(:last-child) {
+  margin-bottom: 0.5rem;
+}
+
+.bd-category-header {
+  position: relative;
+}
+
+.bd-category-toggle {
+  align-items: center;
+  color: #b5b5b5;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.bd-category-toggle .icon {
+  font-size: 0.75rem;
+}
+
+.bd-category-name {
+  color: #363636;
+  position: relative;
+}
+
+.bd-category-list {
+  display: none;
+  font-size: 0.875rem;
+  padding: 0.5rem;
+}
+
+.bd-category-list li:not(:last-child) {
+  margin-bottom: 0.5em;
+}
+
+.bd-category-list li.is-current a {
+  color: #3273dc;
+}
+
+.bd-category-list a {
+  color: #7a7a7a;
+}
+
+.bd-category-list.is-active {
+  display: block;
+}
+
 @media screen and (max-width: 1023px) {
   .bd-lead,
   .bd-side {
@@ -9600,7 +9650,7 @@ label.panel-block:hover {
     display: flex;
   }
   .bd-side {
-    flex: 0 0 calc(16rem + 1.5rem);
+    flex: 0 0 calc(14rem + 1.5rem);
   }
 }
 
