--- a/docs/_sass/example.sass
+++ b/docs/_sass/example.sass
@@ -46,7 +46,7 @@
 // Snippet
 .bd-snippet
   +block
-  border: 1px solid $yellow
+  border: 2px solid $background
   margin-top: 2rem
   position: relative
   &::before
