--- a/docs/_sass/specific.sass
+++ b/docs/_sass/specific.sass
@@ -1,6 +1,75 @@
+.bd-links
+  counter-reset: bd-links
+
+.bd-link
+  border-radius: $radius-large
+  color: $text-light
+  display: block
+  font-size: $size-5
+  padding: 1rem 3rem 1.5rem
+  strong
+    font-weight: $weight-semibold
+  &:hover
+    background-color: $white-bis
+
+.bd-link-name
+  position: relative
+  &::before
+    color: $link
+    counter-increment: bd-links
+    content: counter(bd-links)
+    font-weight: $weight-normal
+    position: absolute
+    right: calc(100% + 0.625em)
+
++desktop
+  .bd-links
+    display: flex
+    flex-wrap: wrap
+  .bd-link
+    width: 50%
+
+.bd-link-name
+  color: $text-strong
+  font-size: $size-4
+  font-weight: $weight-semibold
+
+.bd-docs
+  display: flex
+  flex-wrap: wrap
+
+.bd-doc
+  margin: 0 3rem 1.5rem 0
+  +mobile
+    min-width: calc(50% - 3rem)
+  +tablet
+    min-width: calc(33.3333% - 3rem)
+
+.bd-doc-title
+  color: $text-strong
+  a
+    color: currentColor
+    &:hover
+      color: $link
+  &:not(:last-child)
+    margin-bottom: 0.75rem
+
+.bd-boxes
+  display: flex
+  flex-wrap: wrap
+  justify-content: space-between
+
+.bd-box
+  border: 4px solid $background
+  border-radius: $radius
+
+.bd-box-header
+  text-align: center
+
 .bd-typo
+  text-align: center
   &:not(:first-child)
-    margin-top: 3rem
+    margin-top: $main-spacing
 
 .bd-has-text-rss
   color: $rss
@@ -22,10 +91,9 @@ $navbar-items: ("documentation": $primary, "templates": $info, "videos": $succes
 
 .bd-navbar-item-expo
   &:hover
-    color: #744F09 !important
+    color: #8F6900 !important
     .icon
-      color: #FF7B00 !important
-
+      color: #F4B300 !important
 
 .bd-special-shadow
   background-image: linear-gradient(rgba(#000, 0.1), rgba(#000, 0))
