--- a/docs/_includes/components/links.html
+++ b/docs/_includes/components/links.html
@@ -14,8 +14,13 @@
       {% assign link = site.data.links.by_id[thingy] %}
     {% endif %}
     <a class="bd-link" href="{{ site.url }}{{ link.path }}">
-      <h2 class="bd-link-name">{{ link.name }}</h2>
-      <p class="bd-link-subtitle">{{ link.subtitle }}</p>
+      <h2 class="bd-link-name">
+        <span class="bd-link-counter"></span>
+        {{ link.name }}
+      </h2>
+      <p class="bd-link-subtitle">
+        {{ link.subtitle }}
+      </p>
     </a>
   {% endfor %}
 </nav>
