--- a/docs/_includes/navbar.html
+++ b/docs/_includes/navbar.html
@@ -1,4 +1,5 @@
 <nav id="navbar" class="navbar">
+  <div class="container">
   <div class="navbar-brand">
     <a class="navbar-item" href="{{ site.url }}">
       <img src="{{ site.url }}/images/bulma-logo.png" alt="{{ site.data.meta.title }}" width="112" height="28">
@@ -102,5 +103,6 @@
         </div>
       </div>
     </div>
+  </div>
   </div>
 </nav>
