--- a/docs/_includes/blog-hero.html
+++ b/docs/_includes/blog-hero.html
@@ -1,27 +1,20 @@
-{% include navbar.html id="BlogHero" %}
-
-<section class="hero is-warning">
-  <div class="hero-body">
-    <div class="container">
-      <div class="columns is-vcentered">
-        <div class="column">
-          <h1 class="title">
-            <a href="{{ site.url }}/blog">Blog</a>
-          </h1>
-          <p class="subtitle">
-            Stay updated about new features, bug fixes, and releases
-          </p>
-          <a class="button bd-is-rss" href="{{ site.url }}/atom.xml">
-            <span class="icon">
-              <i class="fas fa-rss"></i>
-            </span>
-            <span>Subscribe</span>
-          </a>
-        </div>
-        <div class="column is-narrow">
-          {% include carbon.html %}
-        </div>
-      </div>
-    </div>
+<header class="bd-header">
+  <div class="bd-header-titles">
+    <h1 class="title">
+      Blog
+    </h1>
+    <p class="subtitle is-4">
+      Stay updated about new features, bug fixes, and releases
+    </p>
+    <a class="button bd-is-rss" href="{{ site.url }}/atom.xml">
+      <span class="icon">
+        <i class="fas fa-rss"></i>
+      </span>
+      <span>Subscribe</span>
+    </a>
   </div>
-</section>
+
+  <div class="bd-header-carbon">
+    {% include carbon.html %}
+  </div>
+</header>
