--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -1,51 +1,96 @@
 ---
 layout: default
 route: blog
+breadcrumb:
+- home
+- blog
 ---
 
-{% include navbar.html id="BlogHero" %}
+{% include navbar.html id="Blog" %}
 
-<div class="bd-article-image is-single is-{{ page.color }}">
-  <span class="bd-article-overlay"></span>
-  <span class="bd-article-icon">
-    <i class="{% if page.icon_brand %}fab{% else %}fas{% endif %} fa-{{ page.icon }}"></i>
-  </span>
-  <strong class="bd-article-info">
-    <span>
-      <time class="bd-article-date" datetime="{{ page.date | date_to_xmlschema }}">
-        {{ page.date | date_to_string }}
-      </time>
-      <strong class="bd-article-title">
-        {{ page.name }}
-      </strong>
-    </span>
-  </strong>
-</div>
+<main class="bd-main">
+  <div class="bd-side-background"></div>
+  <div class="bd-main-container container">
+    <div class="bd-duo">
+      <div class="bd-lead">
+        <div class="bd-breadcrumb">
+          <nav class="breadcrumb" aria-label="breadcrumbs">
+            <ul>
+              <li>
+                {% assign link = site.data.links.by_id['home'] %}
+                <a href="{{ site.url }}{{ link.path }}">{{ link.name }}</a>
+              </li>
+              <li>
+                {% assign link = site.data.links.by_id['blog'] %}
+                <a href="{{ site.url }}{{ link.path }}">{{ link.name }}</a>
+              </li>
+              <li class="is-active">
+                <a href="{{ page.url }}">{{ page.name }}</a>
+              </li>
+            </ul>
+          </nav>
 
-<section class="section">
-  <div class="container">
-    <div class="columns">
-      <div class="column is-offset-2 is-8">
-        <p class="subtitle is-6">
-          <a class="bd-article-back" href="{{ site.url }}/blog">Back to Blog home</a>
-        </p>
-        <h1 class="title is-2">
-          {{ page.title }}
-        </h1>
-        </article>
-        <hr>
-        <div class="content is-medium">
-          {{ content }}
+          {% if page.previous.url or page.next.url %}
+            <nav class="bd-prev-next">
+              {% if page.previous.url %}
+                <a href="{{ site.url }}{{ page.previous.url }}">
+                  ←
+                </a>
+              {% else %}
+                <span>
+                  ←
+                </span>
+              {% endif %}
+
+              {% if page.next.url %}
+                <a href="{{ site.url }}{{ page.next.url }}">
+                  →
+                </a>
+              {% else %}
+                <span>
+                  →
+                </span>
+              {% endif %}
+            </nav>
+          {% endif %}
         </div>
-        <nav class="pagination is-centered" role="navigation" aria-label="pagination">
-          {% if page.previous.url %}
-            <a class="pagination-previous" href="{{ page.previous.url }}">Previous post</a>
-          {% endif %}
-          {% if page.next.url %}
-            <a class="pagination-next" href="{{ page.next.url }}">Next post</a>
-          {% endif %}
-        </nav>
+
+
+        <header class="bd-header">
+          <div class="bd-header-titles">
+            <h1 class="title">
+              {{ page.title }}
+            </h1>
+            <p class="subtitle is-4">
+              {{ page.date | date_to_string }}
+            </p>
+          </div>
+
+          <div class="bd-header-carbon">
+            {% include carbon.html %}
+          </div>
+        </header>
+
+        <div class="bd-content">
+          <div class="content is-medium">
+            {{ content }}
+          </div>
+        </div>
       </div>
+
+      <aside class="bd-side">
+        <nav class="bd-categories">
+          {% for post in site.posts %}
+            <div class="bd-category">
+              <header class="bd-category-header">
+                <a class="bd-category-name" href="{{ post.url }}">
+                  <strong>{{ post.name }}</strong>
+                </a>
+              </header>
+            </div>
+          {% endfor %}
+        </nav>
+      </aside>
     </div>
   </div>
-</section>
+</main>
