--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -130,8 +130,7 @@
   width: 1em;
 }
 
-.is-overlay, .image.is-square img, .image.is-1by1 img, .image.is-5by4 img, .image.is-4by3 img, .image.is-3by2 img, .image.is-5by3 img, .image.is-16by9 img, .image.is-2by1 img, .image.is-3by1 img, .image.is-4by5 img, .image.is-3by4 img, .image.is-2by3 img, .image.is-3by5 img, .image.is-9by16 img, .image.is-1by2 img, .image.is-1by3 img, .modal, .modal-background, .hero-video, .bd-category-toggle, #carbonads .carbon-wrap:hover .carbon-img::after, .intro-spinner, .intro-shadow, .bd-article-overlay, .bd-article-icon,
-.bd-article-info, .bd-structure-item::before, .bd-structure-item::after, .highlight .bd-show, .bd-banner-background, .bd-book-pattern::before,
+.is-overlay, .image.is-square img, .image.is-1by1 img, .image.is-5by4 img, .image.is-4by3 img, .image.is-3by2 img, .image.is-5by3 img, .image.is-16by9 img, .image.is-2by1 img, .image.is-3by1 img, .image.is-4by5 img, .image.is-3by4 img, .image.is-2by3 img, .image.is-3by5 img, .image.is-9by16 img, .image.is-1by2 img, .image.is-1by3 img, .modal, .modal-background, .hero-video, .bd-category-toggle, #carbonads .carbon-wrap:hover .carbon-img::after, .intro-spinner, .intro-shadow, .bd-structure-item::before, .bd-structure-item::after, .highlight .bd-show, .bd-banner-background, .bd-book-pattern::before,
 .bd-book-modal-column.bd-is-cover::before, .bd-book-pattern, .bd-book-modal-background {
   bottom: 0;
   left: 0;
@@ -10538,17 +10537,34 @@ svg {
   background-color: #fafafa;
 }
 
+.bd-link.bd-is-post {
+  padding-left: 5rem;
+}
+
 .bd-link-name {
+  line-height: 1.25;
+  margin-bottom: 0.25em;
   position: relative;
 }
 
-.bd-link-name::before {
+.bd-link-counter {
   color: #3273dc;
   counter-increment: bd-links;
-  content: counter(bd-links);
   font-weight: 400;
   position: absolute;
   right: calc(100% + 0.625em);
+}
+
+.bd-link-counter::before {
+  content: counter(bd-links);
+}
+
+.bd-link-icon {
+  font-size: 2rem;
+  position: absolute;
+  right: calc(100% + 0.5em);
+  text-align: center;
+  width: 1.5em;
 }
 
 @media screen and (min-width: 1088px) {
@@ -10815,141 +10831,12 @@ svg {
   color: #ff470f !important;
 }
 
-.bd-article-image {
-  background-color: #00d1b2;
-  display: block;
-  height: 240px;
-  margin-left: auto;
-  margin-right: auto;
-  overflow: hidden;
-  position: relative;
-  text-align: center;
+.has-text-bootstrap {
+  color: #6f5499 !important;
 }
 
-.bd-article-image.is-white {
-  background-color: white;
-}
-
-.bd-article-image.is-black {
-  background-color: #0a0a0a;
-}
-
-.bd-article-image.is-light {
-  background-color: whitesmoke;
-}
-
-.bd-article-image.is-dark {
-  background-color: #363636;
-}
-
-.bd-article-image.is-primary {
-  background-color: #00d1b2;
-}
-
-.bd-article-image.is-link {
-  background-color: #3273dc;
-}
-
-.bd-article-image.is-info {
-  background-color: #209cee;
-}
-
-.bd-article-image.is-success {
-  background-color: #23d160;
-}
-
-.bd-article-image.is-warning {
-  background-color: #ffdd57;
-}
-
-.bd-article-image.is-danger {
-  background-color: #ff3860;
-}
-
-.bd-article-image.is-bootstrap {
-  background-color: #6f5499;
-}
-
-.bd-article-image.is-orange {
-  background-color: #ff470f;
-}
-
-.bd-article-image:hover .bd-article-overlay {
-  opacity: 0.25;
-}
-
-.bd-article-image:hover .bd-article-icon {
-  transform: scale(1.4);
-}
-
-.bd-article-image:hover .bd-article-date {
-  transform: scale(0.9);
-}
-
-.bd-article-image:hover .bd-article-title {
-  transform: scale(1.1);
-}
-
-.bd-article-image.is-single {
-  margin-bottom: 2rem;
-  width: 100%;
-}
-
-.bd-article-image.is-share {
-  height: 315px;
-  margin: 2rem auto;
-  width: 600px;
-}
-
-.bd-article-overlay {
-  background-color: #0a0a0a;
-  opacity: 0;
-  transition-duration: 86ms;
-  transition-property: opacity;
-  transition-timing-function: ease-out;
-}
-
-.bd-article-icon,
-.bd-article-info {
-  align-items: center;
-  display: flex;
-  justify-content: center;
-}
-
-.bd-article-icon,
-.bd-article-date,
-.bd-article-title {
-  transition-duration: 86ms;
-  transition-property: transform;
-  transition-timing-function: ease-out;
-}
-
-.bd-article-icon {
-  color: #0a0a0a;
-  font-size: 56px;
-  opacity: 0.25;
-}
-
-.bd-article-icon > span {
-  display: block;
-}
-
-.bd-article-info {
-  padding: 20px;
-}
-
-.bd-article-date {
-  color: rgba(0, 0, 0, 0.5);
-  display: block;
-}
-
-.bd-article-title {
-  color: white;
-  display: block;
-  font-size: 2.5rem;
-  font-weight: 700;
-  line-height: 1.25;
-  padding: 0 20px;
+.has-text-patreon {
+  color: #f96854 !important;
 }
 
 .bd-emoji {
